feat: data cleaning for training Jira dataset

--- a/jira/dataset_creation/Jira_dataset/04_merge_testsets_priority_dataset.ipynb
+++ b/jira/dataset_creation/Jira_dataset/04_merge_testsets_priority_dataset.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "[2655053 rows x 6 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "[2071443 rows x 6 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
        "Level 4                      14"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +893,7 @@
        "[2018910 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1206,7 @@
        "P5-Trivial                    2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1414,22 +1414,20 @@
        "[1611418 rows x 6 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Remove projects that does not use 5 priority levels\n",
-    "\n",
-    "# Used a test set in the wild\n",
+    "# Extract test set ofr in the wild\n",
     "jira = df[df['collection'] == 'Jira']\n",
     "mongodb = df[df['collection'] == 'MongoDB']\n",
     "qt = df[df['collection'] == 'Qt']\n",
     "# Maybe \n",
     "jfrog = df[df['collection'] == 'JFrog']\n",
     "\n",
-    "# Remove \n",
+    "# Remove projects that does not use 5 priority levels\n",
     "df = df[df['collection'] != 'Jira']\n",
     "df = df[df['collection'] != 'MongoDB']\n",
     "df = df[df['collection'] != 'Qt']\n",
@@ -1444,15 +1442,12 @@
     "\n",
     "# Filter the DataFrame to keep rows that don't match both conditions\n",
     "df = df[~((df['priority'].isin(priorities_to_remove)) & (df['collection'] == collection_to_match))]\n",
-    "df\n",
-    "\n",
-    "\n",
-    "\n"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1614,7 @@
        "[386205 rows x 6 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1632,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1643,6 +1638,27 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Jira', 'MongoDB', 'Qt', 'JFrog'], dtype=object)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Unique collection\n",
+    "test_set['collection'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1788,7 +1804,7 @@
        "6 - Trivial                  8"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1799,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1895,7 +1911,7 @@
        "P0                 270"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1908,7 +1924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2014,13 +2030,13 @@
        "Must Have         1"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# In collection RedHat, Mojang make priorty low == lowest\n",
+    "# In collection RedHat make priority low == lowest\n",
     "df.loc[df['collection'].isin(['RedHat']) & (df['priority'] == 'Low'), 'priority'] = 'Lowest'\n",
     "# Priority in RedHat collection\n",
     "redhat = df[df['collection'] == 'RedHat']\n",
@@ -2029,7 +2045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2040,7 +2056,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2052,7 +2068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2258,7 +2274,7 @@
        "Must Have                 1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2270,7 +2286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2327,7 +2343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2359,7 +2375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2425,7 +2441,7 @@
        "Lowest     36706"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2437,7 +2453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2629,7 +2645,7 @@
        "[1611418 rows x 7 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2640,7 +2656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2931,7 +2947,7 @@
        "Dependency                          82"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2943,7 +2959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -3135,7 +3151,7 @@
        "[233 rows x 7 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3150,7 +3166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3216,7 +3232,7 @@
        "Lowest       3"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3227,7 +3243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3419,7 +3435,7 @@
        "[1611185 rows x 7 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3433,7 +3449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3499,7 +3515,7 @@
        "Lowest     36703"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3510,7 +3526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3520,7 +3536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3530,13 +3546,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved Highest.csv\n",
+      "Saved High.csv\n",
+      "Saved Medium.csv\n",
+      "Saved Low.csv\n",
+      "Saved Lowest.csv\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "priority_levels = ['Highest', 'High', 'Medium', 'Low', 'Lowest']\n",
     "\n",
+    "# Saves each class to a separate csv file\n",
     "for level in priority_levels:\n",
     "    try:\n",
     "        # Make dir with level\n",
@@ -3552,9 +3581,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read Highest.csv\n",
+      "Read High.csv\n",
+      "Read Medium.csv\n",
+      "Read Low.csv\n",
+      "Read Lowest.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# Read csv to check if file is saved correctly\n",
     "for level in priority_levels:\n",
