--- a/jira/dataset_creation/Jira_dataset/05_data_cleaning_tests_dataset.ipynb
+++ b/jira/dataset_creation/Jira_dataset/05_data_cleaning_tests_dataset.ipynb
@@ -648,12 +648,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_764786/1330035255.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_498302/1330035255.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df.dropna(inplace=True)\n",
-      "/tmp/ipykernel_764786/1330035255.py:5: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_498302/1330035255.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -730,7 +730,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_764786/2002586155.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_498302/2002586155.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -753,7 +753,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_764786/874145615.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_498302/874145615.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -927,7 +927,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4954 rows × 8 columns</p>\n",
+       "<p>4940 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -983,7 +983,7 @@
        "348032  RTFACT-18583 : not solved.\\r\\n\\r\\n[https://git...        NaN  \n",
        "348150                                               xxxx        NaN  \n",
        "\n",
-       "[4954 rows x 8 columns]"
+       "[4940 rows x 8 columns]"
       ]
      },
      "execution_count": 12,
@@ -1005,7 +1005,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_764786/2670129767.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_498302/2670129767.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1111,7 +1111,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>343200</th>\n",
+       "      <th>343214</th>\n",
        "      <td>4 - Normal</td>\n",
        "      <td>Hi,\\r\\n\\r\\nWhen using REST API to create repos...</td>\n",
        "      <td>Artifactory Binary Repository</td>\n",
@@ -1122,7 +1122,7 @@
        "      <td>hi when using rest api to create repository if...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>343201</th>\n",
+       "      <th>343215</th>\n",
        "      <td>1 - Blocker</td>\n",
        "      <td>I am attempting to to follow the guide found h...</td>\n",
        "      <td>Artifactory Binary Repository</td>\n",
@@ -1133,7 +1133,7 @@
        "      <td>i am attempting to to follow the guide found h...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>343202</th>\n",
+       "      <th>343216</th>\n",
        "      <td>4 - Normal</td>\n",
        "      <td>In binarystore.xml, maxCacheSize is in bytes b...</td>\n",
        "      <td>Artifactory Binary Repository</td>\n",
@@ -1144,7 +1144,7 @@
        "      <td>in binarystorexml maxcachesize is in bytes by ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>343203</th>\n",
+       "      <th>343217</th>\n",
        "      <td>4 - Normal</td>\n",
        "      <td>{color:#000000}We are using an artifact(folder...</td>\n",
        "      <td>Artifactory Binary Repository</td>\n",
@@ -1155,7 +1155,7 @@
        "      <td>are using an artifactfolder promotion process ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>343204</th>\n",
+       "      <th>343218</th>\n",
        "      <td>4 - Normal</td>\n",
        "      <td>Remote repositories created with the repo name...</td>\n",
        "      <td>Artifactory Binary Repository</td>\n",
@@ -1167,7 +1167,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>343205 rows × 8 columns</p>\n",
+       "<p>343219 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1178,11 +1178,11 @@
        "3               Low  On windows, Sourcetree.exe will start \"git.exe...   \n",
        "4               Low  Hello,\\r\\n\\r\\nSourceTree 3.4.7.\\r\\n\\r\\nOS: Win...   \n",
        "...             ...                                                ...   \n",
-       "343200   4 - Normal  Hi,\\r\\n\\r\\nWhen using REST API to create repos...   \n",
-       "343201  1 - Blocker  I am attempting to to follow the guide found h...   \n",
-       "343202   4 - Normal  In binarystore.xml, maxCacheSize is in bytes b...   \n",
-       "343203   4 - Normal  {color:#000000}We are using an artifact(folder...   \n",
-       "343204   4 - Normal  Remote repositories created with the repo name...   \n",
+       "343214   4 - Normal  Hi,\\r\\n\\r\\nWhen using REST API to create repos...   \n",
+       "343215  1 - Blocker  I am attempting to to follow the guide found h...   \n",
+       "343216   4 - Normal  In binarystore.xml, maxCacheSize is in bytes b...   \n",
+       "343217   4 - Normal  {color:#000000}We are using an artifact(folder...   \n",
+       "343218   4 - Normal  Remote repositories created with the repo name...   \n",
        "\n",
        "                              project                              labels  \\\n",
        "0              Sourcetree for Windows                                  []   \n",
@@ -1191,11 +1191,11 @@
        "3              Sourcetree for Windows                                  []   \n",
        "4              Sourcetree for Windows                                  []   \n",
        "...                               ...                                 ...   \n",
-       "343200  Artifactory Binary Repository  ['PB_Done', 'QF', 'QF-P2', 'S-P1']   \n",
-       "343201  Artifactory Binary Repository                                  []   \n",
-       "343202  Artifactory Binary Repository                                  []   \n",
-       "343203  Artifactory Binary Repository                                  []   \n",
-       "343204  Artifactory Binary Repository                                  []   \n",
+       "343214  Artifactory Binary Repository  ['PB_Done', 'QF', 'QF-P2', 'S-P1']   \n",
+       "343215  Artifactory Binary Repository                                  []   \n",
+       "343216  Artifactory Binary Repository                                  []   \n",
+       "343217  Artifactory Binary Repository                                  []   \n",
+       "343218  Artifactory Binary Repository                                  []   \n",
        "\n",
        "          issuetype collection  \\\n",
        "0               Bug       Jira   \n",
@@ -1204,11 +1204,11 @@
        "3               Bug       Jira   \n",
        "4               Bug       Jira   \n",
        "...             ...        ...   \n",
-       "343200          Bug      JFrog   \n",
-       "343201          Bug      JFrog   \n",
-       "343202          Bug      JFrog   \n",
-       "343203  New Feature      JFrog   \n",
-       "343204          Bug      JFrog   \n",
+       "343214          Bug      JFrog   \n",
+       "343215          Bug      JFrog   \n",
+       "343216          Bug      JFrog   \n",
+       "343217  New Feature      JFrog   \n",
+       "343218          Bug      JFrog   \n",
        "\n",
        "                                                 text_str  \\\n",
        "0       some errors show up as shown in the screenshot...   \n",
@@ -1217,11 +1217,11 @@
        "3       On windows, Sourcetree.exe will start \"git.exe...   \n",
        "4       Hello,\\r\\n\\r\\nSourceTree 3.4.7.\\r\\n\\r\\nOS: Win...   \n",
        "...                                                   ...   \n",
-       "343200  Hi,\\r\\n\\r\\nWhen using REST API to create repos...   \n",
-       "343201  I am attempting to to follow the guide found h...   \n",
-       "343202  In binarystore.xml, maxCacheSize is in bytes b...   \n",
-       "343203  {color:#000000}We are using an artifact(folder...   \n",
-       "343204  Remote repositories created with the repo name...   \n",
+       "343214  Hi,\\r\\n\\r\\nWhen using REST API to create repos...   \n",
+       "343215  I am attempting to to follow the guide found h...   \n",
+       "343216  In binarystore.xml, maxCacheSize is in bytes b...   \n",
+       "343217  {color:#000000}We are using an artifact(folder...   \n",
+       "343218  Remote repositories created with the repo name...   \n",
        "\n",
        "                                               text_clean  \n",
        "0       some errors show up as shown in the screenshot...  \n",
@@ -1230,13 +1230,13 @@
        "3       on windows sourcetreeexe will start gitexe fsm...  \n",
        "4       hello sourcetree os windows pro problem create...  \n",
        "...                                                   ...  \n",
-       "343200  hi when using rest api to create repository if...  \n",
-       "343201  i am attempting to to follow the guide found h...  \n",
-       "343202  in binarystorexml maxcachesize is in bytes by ...  \n",
-       "343203  are using an artifactfolder promotion process ...  \n",
-       "343204  remote repositories created with the repo name...  \n",
+       "343214  hi when using rest api to create repository if...  \n",
+       "343215  i am attempting to to follow the guide found h...  \n",
+       "343216  in binarystorexml maxcachesize is in bytes by ...  \n",
+       "343217  are using an artifactfolder promotion process ...  \n",
+       "343218  remote repositories created with the repo name...  \n",
        "\n",
-       "[343205 rows x 8 columns]"
+       "[343219 rows x 8 columns]"
       ]
      },
      "execution_count": 13,
@@ -1386,10 +1386,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "An error occurred for level Jira: 'class'\n",
-      "An error occurred for level MongoDB: 'class'\n",
-      "An error occurred for level JFrog: 'class'\n",
-      "An error occurred for level Qt: 'class'\n"
+      "Saved Jira.csv\n",
+      "Saved MongoDB.csv\n",
+      "Saved JFrog.csv\n",
+      "Saved Qt.csv\n"
      ]
     }
    ],
@@ -1401,11 +1401,11 @@
     "for dataset in priority_levels:\n",
     "    try:\n",
     "        # Make dir with level\n",
-    "        os.makedirs(f'{dataset}', exist_ok=True)\n",
+    "        os.makedirs(f'test_datasets', exist_ok=True)\n",
     "        # df with level class\n",
-    "        df_level = df[df['class'] == dataset]\n",
+    "        df_level = df[df['collection'] == dataset]\n",
     "        # Save to csv\n",
-    "        df_level.to_csv(f'{dataset}/clean_{dataset}.csv', index=False)\n",
+    "        df_level.to_csv(f'test_datasets/clean_{dataset}.csv', index=False)\n",
     "        print(f\"Saved {dataset}.csv\")\n",
     "    except Exception as e:\n",
     "        print(f\"An error occurred for level {dataset}: {str(e)}\")"
@@ -1420,10 +1420,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "An error occurred while reading Jira.csv: [Errno 2] No such file or directory: 'Jira/clean_Jira.csv'\n",
-      "An error occurred while reading MongoDB.csv: [Errno 2] No such file or directory: 'MongoDB/clean_MongoDB.csv'\n",
-      "An error occurred while reading JFrog.csv: [Errno 2] No such file or directory: 'JFrog/clean_JFrog.csv'\n",
-      "An error occurred while reading Qt.csv: [Errno 2] No such file or directory: 'Qt/clean_Qt.csv'\n"
+      "Read Jira.csv\n",
+      "Read MongoDB.csv\n",
+      "Read JFrog.csv\n",
+      "Read Qt.csv\n"
      ]
     }
    ],
@@ -1431,7 +1431,7 @@
     "# Read csv to check if file is saved correctly\n",
     "for dataset in priority_levels:\n",
     "    try:\n",
-    "        df = pd.read_csv(f'{dataset}/clean_{dataset}.csv')\n",
+    "        df = pd.read_csv(f'test_datasets/clean_{dataset}.csv')\n",
     "        print(f\"Read {dataset}.csv\")\n",
     "    except Exception as e:\n",
     "        print(f\"An error occurred while reading {dataset}.csv: {str(e)}\")"
