fix: correct mongodb dataset and evalu

--- a/jira/priority_model/highest_vs_rest/02_upload_to_huggingface_testsets.ipynb
+++ b/jira/priority_model/highest_vs_rest/02_upload_to_huggingface_testsets.ipynb
@@ -54,27 +54,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>using this example run via qmlscene code impor...</td>\n",
+       "      <td>info ccdashboardauthauthproperties no jwt secr...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>if i happen to get two modal dialogs open at t...</td>\n",
+       "      <td>first logged failure here note that this commi...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>the attached screenshot shows that the zapfino...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>i perform following tutorial for my knowledgei...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>hello i have some issues with mysqlopenssl lib...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>description yes it would be a new component of...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>we have a few updates to webkit that the webki...</td>\n",
+       "      <td>createuser docs are wrong the name of the user...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -83,50 +83,50 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3877</th>\n",
-       "      <td>this was actually with the packageto reproduce...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3878</th>\n",
-       "      <td>a fairly sure way to cause this crash is to in...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3879</th>\n",
-       "      <td>it seems every example in the dev branch curre...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3880</th>\n",
-       "      <td>the style seems to have a few rough edgesthere...</td>\n",
+       "      <th>1811</th>\n",
+       "      <td>dbcollectioncountor is extremmely slow i comma...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3881</th>\n",
-       "      <td>steps to repro create new presentation add a l...</td>\n",
+       "      <th>1812</th>\n",
+       "      <td>we must make sure that there are no more users...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1813</th>\n",
+       "      <td>paneltitleissue status as of june issue summar...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1814</th>\n",
+       "      <td>the topology coordinator is the repository for...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1815</th>\n",
+       "      <td>the legacy release of the c driver is being tr...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3882 rows × 2 columns</p>\n",
+       "<p>1816 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                             text_clean  label\n",
-       "0     using this example run via qmlscene code impor...      0\n",
-       "1     if i happen to get two modal dialogs open at t...      1\n",
-       "2     the attached screenshot shows that the zapfino...      0\n",
-       "3     hello i have some issues with mysqlopenssl lib...      0\n",
-       "4     we have a few updates to webkit that the webki...      1\n",
+       "0     info ccdashboardauthauthproperties no jwt secr...      0\n",
+       "1     first logged failure here note that this commi...      1\n",
+       "2     i perform following tutorial for my knowledgei...      1\n",
+       "3     description yes it would be a new component of...      1\n",
+       "4     createuser docs are wrong the name of the user...      1\n",
        "...                                                 ...    ...\n",
-       "3877  this was actually with the packageto reproduce...      1\n",
-       "3878  a fairly sure way to cause this crash is to in...      1\n",
-       "3879  it seems every example in the dev branch curre...      1\n",
-       "3880  the style seems to have a few rough edgesthere...      0\n",
-       "3881  steps to repro create new presentation add a l...      0\n",
+       "1811  dbcollectioncountor is extremmely slow i comma...      0\n",
+       "1812  we must make sure that there are no more users...      0\n",
+       "1813  paneltitleissue status as of june issue summar...      1\n",
+       "1814  the topology coordinator is the repository for...      0\n",
+       "1815  the legacy release of the c driver is being tr...      0\n",
        "\n",
-       "[3882 rows x 2 columns]"
+       "[1816 rows x 2 columns]"
       ]
      },
      "execution_count": 2,
@@ -135,7 +135,7 @@
     }
    ],
    "source": [
-    "name = \"clean_Qt_balanced\"\n",
+    "name = \"clean_MongoDB_balanced\"\n",
     "file_name = f\"../csv/{name}.csv\"\n",
     "df = pd.read_csv(file_name)\n",
     "df"
@@ -225,27 +225,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>using this example run via qmlscene code impor...</td>\n",
+       "      <td>info ccdashboardauthauthproperties no jwt secr...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>if i happen to get two modal dialogs open at t...</td>\n",
+       "      <td>first logged failure here note that this commi...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>the attached screenshot shows that the zapfino...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>i perform following tutorial for my knowledgei...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>hello i have some issues with mysqlopenssl lib...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>description yes it would be a new component of...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>we have a few updates to webkit that the webki...</td>\n",
+       "      <td>createuser docs are wrong the name of the user...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -254,50 +254,50 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3877</th>\n",
-       "      <td>this was actually with the packageto reproduce...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3878</th>\n",
-       "      <td>a fairly sure way to cause this crash is to in...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3879</th>\n",
-       "      <td>it seems every example in the dev branch curre...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3880</th>\n",
-       "      <td>the style seems to have a few rough edgesthere...</td>\n",
+       "      <th>1811</th>\n",
+       "      <td>dbcollectioncountor is extremmely slow i comma...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3881</th>\n",
-       "      <td>steps to repro create new presentation add a l...</td>\n",
+       "      <th>1812</th>\n",
+       "      <td>we must make sure that there are no more users...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1813</th>\n",
+       "      <td>paneltitleissue status as of june issue summar...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1814</th>\n",
+       "      <td>the topology coordinator is the repository for...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1815</th>\n",
+       "      <td>the legacy release of the c driver is being tr...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3882 rows × 2 columns</p>\n",
+       "<p>1816 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                             text_clean  label\n",
-       "0     using this example run via qmlscene code impor...      0\n",
-       "1     if i happen to get two modal dialogs open at t...      1\n",
-       "2     the attached screenshot shows that the zapfino...      0\n",
-       "3     hello i have some issues with mysqlopenssl lib...      0\n",
-       "4     we have a few updates to webkit that the webki...      1\n",
+       "0     info ccdashboardauthauthproperties no jwt secr...      0\n",
+       "1     first logged failure here note that this commi...      1\n",
+       "2     i perform following tutorial for my knowledgei...      1\n",
+       "3     description yes it would be a new component of...      1\n",
+       "4     createuser docs are wrong the name of the user...      1\n",
        "...                                                 ...    ...\n",
-       "3877  this was actually with the packageto reproduce...      1\n",
-       "3878  a fairly sure way to cause this crash is to in...      1\n",
-       "3879  it seems every example in the dev branch curre...      1\n",
-       "3880  the style seems to have a few rough edgesthere...      0\n",
-       "3881  steps to repro create new presentation add a l...      0\n",
+       "1811  dbcollectioncountor is extremmely slow i comma...      0\n",
+       "1812  we must make sure that there are no more users...      0\n",
+       "1813  paneltitleissue status as of june issue summar...      1\n",
+       "1814  the topology coordinator is the repository for...      0\n",
+       "1815  the legacy release of the c driver is being tr...      0\n",
        "\n",
-       "[3882 rows x 2 columns]"
+       "[1816 rows x 2 columns]"
       ]
      },
      "execution_count": 4,
@@ -399,11 +399,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1941</td>\n",
+       "      <td>908</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1941</td>\n",
+       "      <td>908</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -412,8 +412,8 @@
       "text/plain": [
        "       count\n",
        "label       \n",
-       "0       1941\n",
-       "1       1941"
+       "0        908\n",
+       "1        908"
       ]
      },
      "execution_count": 6,
@@ -438,7 +438,7 @@
        "DatasetDict({\n",
        "    test: Dataset({\n",
        "        features: ['text_clean', 'label'],\n",
-       "        num_rows: 3882\n",
+       "        num_rows: 1816\n",
        "    })\n",
        "})"
       ]
@@ -477,7 +477,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "261a18fd48af4d1882d3e50bf29fc787",
+       "model_id": "fe32bb95a48d41b0bafef894e2a45412",
        "version_major": 2,
        "version_minor": 0
       },
@@ -491,12 +491,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c25fbadf2a1f4535a9c9b47a739bdfeb",
+       "model_id": "d1a6bb97da0f45ffbd0d8b62d4860ef2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/4 [00:00<?, ?ba/s]"
+       "Creating parquet from Arrow format:   0%|          | 0/2 [00:00<?, ?ba/s]"
       ]
      },
      "metadata": {},
@@ -505,7 +505,7 @@
    ],
    "source": [
     "# Push to Hugging Face Hub\n",
-    "ds.push_to_hub(name)"
+    "ds.push_to_hub(name+\"_1\")"
    ]
   },
   {
