--- a/jira/priority_model/highest_vs_rest/03_training_highest_vs_rest.ipynb
+++ b/jira/priority_model/highest_vs_rest/03_training_highest_vs_rest.ipynb
@@ -173,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mongoDB = load_dataset(\"kristmh/clean_MongoDB_balanced\")\n",
+    "mongoDB = load_dataset(\"kristmh/clean_MongoDB_balanced_1\")\n",
     "mongoDB"
    ]
   },
@@ -314,9 +314,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mongoDB = mongoDB.map(tokenize, batched=True)\n",
-    "mongoDB_testset = mongoDB[\"test\"]\n",
+    "mongoDB_tokenized = mongoDB.map(tokenize, batched=True)\n",
+    "mongoDB_testset = mongoDB_tokenized[\"test\"]\n",
     "mongoDB_testset\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e10b2b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jira_tokenized = jira.map(tokenize, batched=True)\n",
+    "jira_testset = jira_tokenized[\"test\"]\n",
+    "jira_testset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9956576f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qt_tokenized = qt.map(tokenize, batched=True)\n",
+    "qt_testset = qt_tokenized[\"test\"]\n",
+    "qt_testset"
    ]
   },
   {
@@ -520,6 +544,31 @@
     "mongoDB_test_results = trainer.evaluate(eval_dataset=mongoDB_testset)\n",
     "for key, value in sorted(mongoDB_test_results.items()):\n",
     "    print(f\"{key} = {value}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93fdafce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jira_test_results = trainer.evaluate(eval_dataset=jira_testset)\n",
+    "for key, value in sorted(jira_test_results.items()):\n",
+    "    print(f\"{key} = {value}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd469d9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qt_test_results = trainer.evaluate(eval_dataset=qt_testset)\n",
+    "for key, value in sorted(qt_test_results.items()):\n",
+    "    print(f\"{key} = {value}\\n\")\n",
+    "    "
    ]
   },
   {
