--- a/priority/dataset_creation/more_high/04_combine_parts.ipynb
+++ b/priority/dataset_creation/more_high/04_combine_parts.ipynb
@@ -26,7 +26,7 @@
     "# Loop through each file, load it, and append to the list\n",
     "for i in range(1, 6):\n",
     "    print(i)\n",
-    "    part_df = pd.read_csv(f'csv/updated_issues_part_{i}.csv')\n",
+    "    part_df = pd.read_csv(f'/fp/homes01/u01/ec-krimhau/ondemand/updated_issues_part_{i}.csv')\n",
     "    dfs.append(part_df)\n",
     "\n",
     "# Concatenate all DataFrames in the list into one\n",
@@ -2218,7 +2218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2227,7 +2227,7 @@
        "57570"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3137,7 +3137,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hmm_test",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3151,9 +3151,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
