feat: done trainig high vs rest github top 50 hp repos

--- a/priority_model_deberta/github_models/high_vs_rest/high_vs_rest_top_50_hp_repos/01_training/01_train_high_vs_rest_top50_hp.ipynb
+++ b/priority_model_deberta/github_models/high_vs_rest/high_vs_rest_top_50_hp_repos/01_training/01_train_high_vs_rest_top50_hp.ipynb
@@ -1692,7 +1692,274 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|▎         | 197/7577 [00:54<35:52,  3.43it/s, Epoch=1, LR=6.97e-6, Train_Loss=0.721]"
+      "100%|██████████| 7577/7577 [35:18<00:00,  3.58it/s, Epoch=1, LR=1.52e-6, Train_Loss=0.602] \n",
+      "100%|██████████| 1895/1895 [05:14<00:00,  6.02it/s, Epoch=1, LR=1.52e-6, Valid_Loss=0.536]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      Non_HP     0.6944    0.7932    0.7405     15169\n",
+      "          HP     0.7584    0.6502    0.7002     15142\n",
+      "\n",
+      "    accuracy                         0.7218     30311\n",
+      "   macro avg     0.7264    0.7217    0.7203     30311\n",
+      "weighted avg     0.7263    0.7218    0.7203     30311\n",
+      "\n",
+      "Accuracy = 0.7218\n",
+      "F1_score = 0.7002\n",
+      "\u001b[34mValidation Loss Improved (inf ---> 0.5355878517261251)\n",
+      "Model Saved\u001b[0m\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7577/7577 [34:52<00:00,  3.62it/s, Epoch=2, LR=8.05e-6, Train_Loss=0.509]\n",
+      "100%|██████████| 1895/1895 [05:15<00:00,  6.01it/s, Epoch=2, LR=8.05e-6, Valid_Loss=0.54] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      Non_HP     0.6780    0.8502    0.7544     15169\n",
+      "          HP     0.7987    0.5954    0.6823     15142\n",
+      "\n",
+      "    accuracy                         0.7229     30311\n",
+      "   macro avg     0.7383    0.7228    0.7183     30311\n",
+      "weighted avg     0.7383    0.7229    0.7184     30311\n",
+      "\n",
+      "Accuracy = 0.7229\n",
+      "F1_score = 0.6823\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7577/7577 [34:58<00:00,  3.61it/s, Epoch=3, LR=4.96e-6, Train_Loss=0.459]\n",
+      "100%|██████████| 1895/1895 [05:15<00:00,  6.01it/s, Epoch=3, LR=4.96e-6, Valid_Loss=0.508]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      Non_HP     0.7443    0.7654    0.7547     15169\n",
+      "          HP     0.7581    0.7366    0.7472     15142\n",
+      "\n",
+      "    accuracy                         0.7510     30311\n",
+      "   macro avg     0.7512    0.7510    0.7510     30311\n",
+      "weighted avg     0.7512    0.7510    0.7510     30311\n",
+      "\n",
+      "Accuracy = 0.751\n",
+      "F1_score = 0.7472\n",
+      "\u001b[34mValidation Loss Improved (0.5355878517261251 ---> 0.5078334726054259)\n",
+      "Model Saved\u001b[0m\n",
+      "\n",
+      "Training complete in 2h 0m 58s\n",
+      "Best Loss: 0.5078\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "wandb: WARNING Source type is set to 'repo' but some required information is missing from the environment. A job will not be created from this run. See https://docs.wandb.ai/guides/launch/create-job\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='0.020 MB of 0.020 MB uploaded\\r'), FloatProgress(value=1.0, max=1.0)))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
+       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
+       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
+       "    </style>\n",
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>Train Loss</td><td>█▃▁</td></tr><tr><td>Valid Accuracy</td><td>▁▁█</td></tr><tr><td>Valid F1_score</td><td>▃▁█</td></tr><tr><td>Valid Loss</td><td>▇█▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>Best Loss</td><td>0.50783</td></tr><tr><td>Train Loss</td><td>0.45855</td></tr><tr><td>Valid Accuracy</td><td>0.751</td></tr><tr><td>Valid F1_score</td><td>0.7472</td></tr><tr><td>Valid Loss</td><td>0.50783</td></tr></table><br/></div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run <strong style=\"color:#cdcd00\">spg5hqkx59rs-fold-1</strong> at: <a href='https://wandb.ai/krimhau/GitHub_high_vs_rest/runs/pltqhdp8' target=\"_blank\">https://wandb.ai/krimhau/GitHub_high_vs_rest/runs/pltqhdp8</a><br/>Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>./wandb/run-20240326_103412-pltqhdp8/logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[33m====== Fold: 2 ======\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "wandb version 0.16.5 is available!  To upgrade, please run:\n",
+       " $ pip install wandb --upgrade"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.16.4"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/fp/homes01/u01/ec-krimhau/thesis_code/priority_model_deberta/github_models/high_vs_rest/high_vs_rest_top_50_hp_repos/01_training/wandb/run-20240326_123524-7romx46o</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/krimhau/GitHub_high_vs_rest/runs/7romx46o' target=\"_blank\">spg5hqkx59rs-fold-2</a></strong> to <a href='https://wandb.ai/krimhau/GitHub_high_vs_rest' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/krimhau/GitHub_high_vs_rest' target=\"_blank\">https://wandb.ai/krimhau/GitHub_high_vs_rest</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/krimhau/GitHub_high_vs_rest/runs/7romx46o' target=\"_blank\">https://wandb.ai/krimhau/GitHub_high_vs_rest/runs/7romx46o</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] Using GPU: NVIDIA A100-PCIE-40GB\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7577/7577 [35:05<00:00,  3.60it/s, Epoch=1, LR=1.52e-6, Train_Loss=0.596]\n",
+      "100%|██████████| 1895/1895 [05:16<00:00,  5.98it/s, Epoch=1, LR=1.52e-6, Valid_Loss=0.534]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      Non_HP     0.7226    0.7160    0.7193     15170\n",
+      "          HP     0.7180    0.7246    0.7213     15141\n",
+      "\n",
+      "    accuracy                         0.7203     30311\n",
+      "   macro avg     0.7203    0.7203    0.7203     30311\n",
+      "weighted avg     0.7203    0.7203    0.7203     30311\n",
+      "\n",
+      "Accuracy = 0.7203\n",
+      "F1_score = 0.7213\n",
+      "\u001b[34mValidation Loss Improved (inf ---> 0.5337249738452483)\n",
+      "Model Saved\u001b[0m\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 63%|██████▎   | 4774/7577 [21:58<13:31,  3.45it/s, Epoch=2, LR=2.83e-6, Train_Loss=0.517]"
      ]
     }
    ],
