feat: fine-tuning high vs med/low mypy

--- a/priority_model_deberta/jira_models/high_vs_rest/03_fine_tuning/jira_30_fine_tuning/Fine_tune_Jira_code_Train_30.ipynb
+++ b/priority_model_deberta/jira_models/high_vs_rest/03_fine_tuning/jira_30_fine_tuning/Fine_tune_Jira_code_Train_30.ipynb
@@ -3425,7 +3425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df[[\"text\",\"label\",\"pred\"]].to_csv(\"MongoDB_70_Test_inference.csv\")"
+    "test_df[[\"text\",\"label\",\"pred\"]].to_csv(\"Jira_70_Test_inference.csv\")"
    ]
   },
   {
